#--------------------------------------------------------------------
# Copyright (c) 2012-2021 James O. D. Hunt <jamesodhunt@gmail.com>.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#--------------------------------------------------------------------

# Don't require 'README' as we use a markdown file instead.
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = m4/ChangeLog man/procenv.1 procenv.spec
man1_MANS = man/procenv.1
